Show action links all the time

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,3 @@
-.post-aggregator-promotion-display {
-	font-weight: bold;
-}
-
-.aggregator-promotion-select {
-	line-height: 1.5em;
+.wp_list_aggregator_jobs .row-actions {
+	visibility: visible;
 }
